--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
 	<meta name="author" content="Joel Worrall - joel@cure.org" />
-	<title>cure.org redesign</title>
+	<title>cure.org site redesign</title>
 	<link rel="stylesheet" type="text/css" media="screen, print" href="slickmap.css" />
 </head>
 
